config/default/validating_policies/konnect/kongupstream_client_certificate_deprecation_policy.yaml
# NOTE: field-level deprecations via Kubebuilder annotations do not generate any warning to the
# users when the deprecated field is used.
# Until this is not fixed we need a ValidatingAdmissionPolicy to emit the warning.
# Upstream issue: https://github.com/kubernetes/kubernetes/issues/131817
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "client-certificate.kongupstream.configuration.konghq.com"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
        - configuration.konghq.com
      apiVersions:
        - v1alpha1
      operations:
        - CREATE
        - UPDATE
      resources:
        - kongupstreams
  validations:
  - expression: "!has(object.spec.client_certificate)"
    message: "spec.client_certificate is deprecated, use spec.clientCertificateRef instead."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "binding-client-certificate.kongupstream.configuration.konghq.com"
spec:
  policyName: "client-certificate.kongupstream.configuration.konghq.com"
  validationActions:
    - Warn
    - Audit
